--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.6",
+        "@mdi/font": "^7.2.96",
+        "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.4.0",
-        "bootstrap": "^5.3.0",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.5",
+        "material-design-icons-iconfont": "^6.7.0",
+        "postcss": "^8.4.25",
         "sass": "^1.56.1",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.0.0",
-        "vue": "^3.2.36"
+        "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "moment": "^2.29.4",
+        "v-calendar": "^3.0.3",
+        "vue-router": "^4.2.4",
+        "vuetify": "^3.3.8"
     }
 }
